@@ -34,6 +34,20 @@
 
 
     <meta:complexDirective
+        name="form"
+        schema=".metadirectives.IFormDirective"
+        handler=".metaconfigure.FormDirective"
+        >
+
+      <meta:subdirective
+          name="widget"
+          schema=".metadirectives.IWidgetSubdirective"
+          />
+
+    </meta:complexDirective>
+
+
+    <meta:complexDirective
         name="editform"
         schema=".metadirectives.IEditFormDirective"
         handler=".metaconfigure.EditFormDirective"
